Security uplift
Issue-ID: POLICY-5302
Change-Id: I4c59cf0107ed8366636a0944488d0f81030d91b3
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>